HELIO-2934, HELIO-2220 * Add ga event tracking to Work tabs * Added dynamic ga event tracking for facets

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -38,7 +38,7 @@
     <% end %>
   </div><!-- /.monograph-cover -->
   <div class="col-sm-9 monograph-metadata">
-    <h1><%= @presenter.title %></h1>
+    <h1 id="work-title"><%= @presenter.title %></h1>
     <% if @presenter.authors? %>
         <span class="authors"><%= render_markdown @presenter.authors %></span>
     <% end %>
