--- a/app/views/shared/_brand_press_banner.html.erb
+++ b/app/views/shared/_brand_press_banner.html.erb
@@ -3,7 +3,7 @@
 <div class="alert alert-info alert-dismissible banner container" role="alert" style="display: none;">
   <button type="button" onclick="banner_button_no()" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&#x2715</span></button>
   <p class="message"><%= raw t(banner_message) %></p>
-  <button type="button" onclick="banner_button_no()" class="btn btn-default btn-lg" data-dismiss="alert" aria-label="Close">Got it</button>
+  <button type="button" onclick="banner_button_no()" class="btn btn-default btn-lg" data-dismiss="alert" aria-label="Got it. Close Dialog">Got it</button>
 </div>
 <script type="text/javascript">
     function banner_button_no(){
