--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -46,7 +46,7 @@
     <span aria-label="publication date" class="pubdate"><%= @presenter.date_created.first %></span>
     <% end %>
     <% if @presenter.license? %>
-      <span class="license"><a aria-label="license" rel="license" href="<%= @presenter.license.first %>" target="_blank"><%= @presenter.license_link_content %></a></span>
+      <span class="license"><a aria-label="<%= @presenter.license_alt_text %>" rel="license" href="<%= @presenter.license.first %>" target="_blank"><%= @presenter.license_link_content %></a></span>
     <% end %>
     <% if @presenter.copyright_holder? %>
        <% if @presenter.holding_contact? %>
