--- a/app/views/catalog/_facet_pagination.html.erb
+++ b/app/views/catalog/_facet_pagination.html.erb
@@ -1,19 +1,19 @@
 <div class="prev_next_links btn-group pull-left">
   <%= link_to_previous_page @pagination, raw(t('views.pagination.previous')), params: search_state.to_h, param_name: blacklight_config.facet_paginator_class.request_keys[:page], class: 'btn btn-link', data: { ajax_modal: "preserve" } do %>
-    <span class="disabled btn btn-disabled"><%= raw(t('views.pagination.previous')) %></span>
+    <span class="disabled btn btn-disabled", aria-hidden="true"><%= raw(t('views.pagination.previous')) %></span>
   <% end %>
 
   <%= link_to_next_page @pagination, raw(t('views.pagination.next')), params: search_state.to_h, param_name: blacklight_config.facet_paginator_class.request_keys[:page], class: 'btn btn-link',  data: { ajax_modal: "preserve" } do %>
-    <span class="disabled btn  btn-disabled"><%= raw(t('views.pagination.next')) %></span>
+    <span class="disabled btn  btn-disabled", aria-hidden="true"><%= raw(t('views.pagination.next')) %></span>
   <% end %>
 </div>
 
 <div class="sort_options btn-group pull-right">
   <% if @pagination.sort == 'index' -%>
-    <span class="active az btn btn-default"><%= facet_pagination_sort_index_label(@facet) %></span>
+    <span class="active az btn btn-default", aria-hidden="true"><%= facet_pagination_sort_index_label(@facet) %></span>
     <%= link_to(facet_pagination_sort_count_label(@facet), @pagination.params_for_resort_url('count', search_state.to_h), class: "sort_change numeric btn btn-default", data: { ajax_modal: "preserve" }) %>
   <% elsif @pagination.sort == 'count' -%>
     <%=  link_to(facet_pagination_sort_index_label(@facet), @pagination.params_for_resort_url('index', search_state.to_h), class: "sort_change az btn btn-default",  data: { ajax_modal: "preserve" }) %>
-    <span class="active numeric btn btn-default"><%= facet_pagination_sort_count_label(@facet) %></span>
+    <span class="active numeric btn btn-default", aria-hidden="true"><%= facet_pagination_sort_count_label(@facet) %></span>
   <% end -%>
 </div>
