--- a/app/views/catalog/facet.html.erb
+++ b/app/views/catalog/facet.html.erb
@@ -3,19 +3,23 @@
 </div>
 
 <div data-ajax-modal="container">
-  <div class="modal-header">
-    <button type="button" class="ajax-modal-close close" data-dismiss="modal" aria-label="Close" aria-hidden="true">&times;</button>
-    <h3 class="modal-title"><%= facet_field_label(@facet.key) %></h3>
-    <%= render partial: 'facet_index_navigation' if @facet.index_range && @display_facet.index? %>
-  </div>
-  <div class="modal-body">
-    <div class="facet_extended_list">
-      <%= render_facet_limit(@display_facet, layout: false) %>
+  <div aria-label="<%= facet_field_label(@facet.key) %>">
+    <div class="modal-header">
+      <button type="button" class="ajax-modal-close close" data-dismiss="modal" aria-label="Close">
+        <span  aria-hidden="true">&times;</span>
+      </button>
+      <h3 class="modal-title"><%= facet_field_label(@facet.key) %></h3>
+      <%= render partial: 'facet_index_navigation' if @facet.index_range && @display_facet.index? %>
     </div>
-  </div>
-  <div class="modal-footer">
-    <div class="facet_pagination bottom">
-      <%= render partial: 'facet_pagination' %>
+    <div class="modal-body">
+      <div class="facet_extended_list">
+        <%= render_facet_limit(@display_facet, layout: false) %>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <div class="facet_pagination bottom">
+        <%= render partial: 'facet_pagination' %>
+      </div>
     </div>
   </div>
 </div>
