--- a/app/views/shared/_ajax_modal.html.erb
+++ b/app/views/shared/_ajax_modal.html.erb
@@ -1,4 +1,4 @@
-<div id="ajax-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal menu" aria-hidden="true">
+<div id="ajax-modal" class="modal fade" tabindex="-1" role="dialog" style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
     </div>
