Addresses HELIO-3000 Include Parent Press GA ID on Sub Press pages

--- a/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
@@ -24,10 +24,10 @@
     if (typeof(ga) == typeof(Function)) {
       var audio = $('#audio').get(0)
       audio.addEventListener("play", function() {
-        ga('pressTracker.send', 'event', 'e_reader', 'play_audio', window.location.href);
+        press_tracker_event('e_reader', 'play_audio', window.location.href);
       });
       audio.addEventListener("pause", function() {
-        ga('pressTracker.send', 'event', 'e_reader', 'stop_audio', window.location.href);
+        press_tracker_event('e_reader', 'stop_audio', window.location.href);
       });
     }
   }
