--- a/app/views/hyrax/file_sets/media_display_embedded/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_video.html.erb
@@ -21,10 +21,10 @@
       if (typeof(ga) == typeof(Function)) {
         var video = $('#video').get(0)
         video.addEventListener("play", function() {
-          ga('pressTracker.send', 'event', 'e_reader', 'play_video', window.location.href);
+          press_tracker_event('e_reader', 'play_video', window.location.href);
         });
         video.addEventListener("pause", function() {
-          ga('pressTracker.send', 'event', 'e_reader', 'stop_video', window.location.href);
+          press_tracker_event('e_reader', 'stop_video', window.location.href);
         });
       }
     }
